[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/DIGITALDREAM.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/ui/ui.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/Flower.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/hourglass.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/exit.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/exit_highlight.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/exit_press.png" type="Texture" id=7]
[ext_resource path="res://src/ui/exit_button.gd" type="Script" id=8]
[ext_resource path="res://assets/sounds/clock_tick.ogg" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 1 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -62.0
custom_constants/margin_right = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1004.0
margin_bottom = 42.0
custom_constants/separation = 45
alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 654.0
margin_right = 810.0
margin_bottom = 42.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer2"]
margin_right = 156.0
margin_bottom = 42.0
custom_constants/separation = 12

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer"]
self_modulate = Color( 0.854902, 1, 0.847059, 1 )
margin_top = 10.0
margin_right = 32.0
margin_bottom = 42.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 8
texture = ExtResource( 3 )
stretch_mode = 6

[node name="FlowerClock" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 44.0
margin_right = 156.0
margin_bottom = 42.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.360784, 0.403922, 0.360784, 1 )
text = "67:89:02"
valign = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 855.0
margin_right = 1004.0
margin_bottom = 42.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer"]
margin_right = 149.0
margin_bottom = 42.0
custom_constants/separation = 5

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer/HBoxContainer"]
self_modulate = Color( 0.854902, 1, 0.847059, 1 )
margin_top = 10.0
margin_right = 32.0
margin_bottom = 42.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 8
texture = ExtResource( 4 )
stretch_mode = 6

[node name="LifeClock" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 37.0
margin_right = 149.0
margin_bottom = 42.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.360784, 0.403922, 0.360784, 1 )
text = "01:23:45"
valign = 2

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_top = 20
custom_constants/margin_left = 20

[node name="ExitButton" type="TextureButton" parent="MarginContainer2"]
self_modulate = Color( 0.854902, 1, 0.847059, 1 )
margin_left = 20.0
margin_top = 20.0
margin_right = 52.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 5
script = ExtResource( 8 )

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0
bus = "Echo"
[connection signal="pressed" from="MarginContainer2/ExitButton" to="MarginContainer2/ExitButton" method="_on_ExitButton_pressed"]
